@@ -669,7 +669,8 @@ The replaced SASL name can be either a DN or an LDAP URI. If the
 latter, the server will use the URI to search its own database(s)
 and, if the search returns exactly one entry, the SASL name is
 replaced by the DN of that entry.   The LDAP URI must have no
-hostport, attrs, or extensions components, e.g.
+hostport, attrs, or extensions components, but the filter is mandatory,
+e.g.
 .RS
 .TP
 .B ldap:///OU=Accounts,DC=example,DC=com??one?(UID=$1)
